# cis-app

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  env.template  pyproject.toml  rag_prompt.md
src/: app.py  logger.py  openai_services.py  rag_pipeline.py
