[project]
name = "cis-app"
version = "0.1.0"
description = "A lightweight RAG PDF ingester leveraging AWS S3 and OpenSearch Service"
authors = []
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",    # .env loader
  "pydantic>=2.0.0",         # config & data validation
  "streamlit>=1.25.0",       # UI
  "numpy>=1.24.4",           # numeric core
  "openai>=1.82.1",          # OpenAI API calls
  "boto3>=1.39.17",          # S3 cache
  "transformers>=4.52.4",    
  "sentence-transformers>=4.1.0",
  "faiss-cpu>=1.10.0",
  "html2text",
  "humanfriendly",
]
